--- a/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
+++ b/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<Product>Autoprefixer Host for .NET: Tests</Product>
 		<VersionPrefix>1.1.5</VersionPrefix>
-		<TargetFrameworks>net40;net451;netcoreapp1.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net40;net451;net461;netcoreapp1.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
 		<OutputType>Library</OutputType>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<IsTestProject>true</IsTestProject>
@@ -13,21 +13,24 @@
 	<Import Project="../../build/common.props" />
 
 	<ItemGroup>
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-arm" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" Version="3.4.4" />
-		<PackageReference Include="JavaScriptEngineSwitcher.NiL" Version="3.4.3" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.4.5" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" Version="3.4.5" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.4.5" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-arm" Version="3.4.5" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.4.5" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" Version="3.4.5" />
 		<PackageReference Include="NUnit" Version="3.12.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
 
 		<ProjectReference Include="../../src/AutoprefixerHost/AutoprefixerHost.csproj" />
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net40' Or '$(TargetFramework)' == 'net451' Or '$(TargetFramework)' == 'netcoreapp2.1' Or '$(TargetFramework)' == 'netcoreapp3.1' ">
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net40' Or '$(TargetFramework)' == 'net451' Or '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netcoreapp2.1' Or '$(TargetFramework)' == 'netcoreapp3.1' ">
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netcoreapp2.1' Or '$(TargetFramework)' == 'netcoreapp3.1' ">
+		<PackageReference Include="JavaScriptEngineSwitcher.Jint" Version="3.5.0-preview" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">
