--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Product>Autoprefixer Host for .NET</Product>
-    <VersionPrefix>1.1.11</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     <TargetFrameworks>net40-client;net45;netstandard1.3;netstandard2.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -20,7 +20,7 @@ Since the original library is written in JavaScript, you will need a JS engine t
 
  * JavaScriptEngineSwitcher.ChakraCore
  * JavaScriptEngineSwitcher.V8
- * JavaScriptEngineSwitcher.Msie (only in the Chakra “Edge” JsRT mode)
+ * JavaScriptEngineSwitcher.Msie (only in the Chakra JsRT modes)
 
 After installing the packages, you will need to register the default JS engine (https://github.com/Taritsyn/JavaScriptEngineSwitcher/wiki/Registration-of-JS-engines).</Description>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
