--- a/src/AutoprefixerHost/.babelrc
+++ b/src/AutoprefixerHost/.babelrc
@@ -5,7 +5,9 @@
       "@babel/preset-env",
       {
         "targets": {
-          "ie": "9"
+          "chrome": "10",
+          "firefox": "4",
+          "ie": "9",
         },
         "useBuiltIns": false
       }
