--- a/src/AutoprefixerHost/package.json
+++ b/src/AutoprefixerHost/package.json
@@ -2,9 +2,9 @@
   "name": "AutoprefixerHost",
   "version": "3.0.1",
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
-    "uglify-js": "^3.12.0"
+    "@babel/cli": "7.12.8",
+    "@babel/core": "7.12.9",
+    "@babel/preset-env": "7.12.7",
+    "uglify-js": "3.12.1"
   }
 }
