--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -110,31 +110,10 @@ After installing the packages, you will need to register the default JS engine (
     <ResxToCsTask InputDirectory="./Resources/" Namespace="$(RootNamespace).Resources" InternalAccessModifier="true" />
   </Target>
 
-  <Target Name="NodePackageInstallation" BeforeTargets="BeforeBuild">
-    <Exec Command='npm install'
-      WorkingDirectory="$(ProjectDir)"
-      ConsoleToMsBuild="true" />
-  </Target>
-
-  <Target Name="Es6Translation" AfterTargets="NodePackageInstallation">
-    <Exec Command='babel --out-file "$(ProjectDir)Resources/autoprefixer-combined.js" --config-file "$(ProjectDir).babelrc" "$(ProjectDir)Resources/autoprefixer-combined.es6"'
-      WorkingDirectory="$(ProjectDir)node_modules/.bin/"
-      ConsoleToMsBuild="true" />
-  </Target>
-
-  <Target Name="JsMinification" AfterTargets="Es6Translation">
-    <Exec
-      Command='uglifyjs "$(ProjectDir)Resources/es6-polyfills.js" --output "$(ProjectDir)Resources/es6-polyfills.min.js" --config-file "$(ProjectDir).uglifyjsrc"'
-      WorkingDirectory="$(ProjectDir)node_modules/.bin/"
-      ConsoleToMsBuild="true" />
-    <Exec
-      Command='uglifyjs "$(ProjectDir)Resources/autoprefixer-combined.js" --output "$(ProjectDir)Resources/autoprefixer-combined.min.js" --config-file "$(ProjectDir).uglifyjsrc"'
-      WorkingDirectory="$(ProjectDir)node_modules/.bin/"
-      ConsoleToMsBuild="true" />
-    <Exec
-      Command='uglifyjs "$(ProjectDir)Resources/autoprefixer-helper.js" --output "$(ProjectDir)Resources/autoprefixer-helper.min.js" --config-file "$(ProjectDir).uglifyjsrc"'
-      WorkingDirectory="$(ProjectDir)node_modules/.bin/"
-      ConsoleToMsBuild="true" />
+  <Target Name="EnsureJsFilesBuilded" BeforeTargets="BeforeBuild">
+    <Error
+      Condition=" !Exists('./Resources/es6-polyfills.min.js') Or !Exists('./Resources/autoprefixer-combined.min.js') Or !Exists('./Resources/autoprefixer-helper.min.js') "
+      Text="In release mode, you need to build JS files. To do this, run a `build-js.cmd` or `build-js.sh` script." />
   </Target>
 
 </Project>
