--- a/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
+++ b/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.18.2" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" Version="3.18.2" />
     <PackageReference Include="JavaScriptEngineSwitcher.Msie" Version="3.19.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
 
@@ -34,8 +34,8 @@
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.0.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netcoreapp2.1' Or '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0' ">
-    <PackageReference Include="JavaScriptEngineSwitcher.NiL" Version="3.19.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0' ">
+    <PackageReference Include="JavaScriptEngineSwitcher.NiL" Version="3.20.0" />
   </ItemGroup>
 
   <ItemGroup>
