--- a/test/AutoprefixerHost.Benchmarks/AutoprefixerHost.Benchmarks.csproj
+++ b/test/AutoprefixerHost.Benchmarks/AutoprefixerHost.Benchmarks.csproj
@@ -6,23 +6,24 @@
     <TargetFrameworks>net461;netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <Import Project="../../build/common.props" />
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.3" />
-    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.20.5" />
-    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.20.5" />
-    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" Version="3.20.5" />
+    <PackageReference Include="BenchmarkDotNet" VersionOverride="0.13.3" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" />
 
     <ProjectReference Include="../../src/AutoprefixerHost/AutoprefixerHost.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' != 'net461' ">
-    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" Version="3.20.5" />
-    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.20.5" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" />
   </ItemGroup>
 
   <ItemGroup>
