--- a/test/AutoprefixerHost.Benchmarks/AutoprefixerHost.Benchmarks.csproj
+++ b/test/AutoprefixerHost.Benchmarks/AutoprefixerHost.Benchmarks.csproj
@@ -8,6 +8,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <IsPackable>false</IsPackable>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <Import Project="../../build/common.props" />
