--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Product>Autoprefixer Host for .NET</Product>
     <VersionPrefix>3.0.26</VersionPrefix>
-    <TargetFrameworks>net40-client;net45;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40-client;net45;net461;netstandard1.3;netstandard2.0;net6.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyOriginatorKeyFile>../../build/Key.snk</AssemblyOriginatorKeyFile>
@@ -33,7 +33,8 @@ After installing the packages, you will need to register the default JS engine (
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageTags>Autoprefixer;CSS</PackageTags>
-    <PackageReleaseNotes>Added support of the Autoprefixer version 10.4.13.0.</PackageReleaseNotes>
+    <PackageReleaseNotes>1. For latest versions of .NET now uses the System.Text.Json library as JSON serializer;
+2. Added a .NET Framework 4.6.1 and .NET 6 targets.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
@@ -43,12 +44,23 @@ After installing the packages, you will need to register the default JS engine (
   <Import Project="../../build/net40-client-target.props" />
   <Import Project="../../build/nuget-common.props" />
 
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net6.0' ">
+    <DefineConstants>$(DefineConstants);MODERN_JSON_CONVERTER</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AdvancedStringBuilder" Version="0.1.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.Core" Version="3.1.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ResxToCs.MSBuild" Version="1.0.0-alpha6" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net40-client' Or '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'netstandard1.3' ">
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
