--- a/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
+++ b/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
@@ -3,52 +3,36 @@
   <PropertyGroup>
     <Product>Autoprefixer Host for .NET: Tests</Product>
     <VersionPrefix>3.0.31</VersionPrefix>
-    <TargetFrameworks>net40;net45;net461;netcoreapp2.1;netcoreapp3.1;net5.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <IsTestProject>true</IsTestProject>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <IsPackable>false</IsPackable>
-    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <Import Project="../../build/common.props" />
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" VersionOverride="17.8.0" />
+    <PackageReference Include="NUnit" VersionOverride="3.14.0" />
+    <PackageReference Include="NUnit3TestAdapter" VersionOverride="4.5.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" />
     <PackageReference Include="JavaScriptEngineSwitcher.Msie" />
-    <PackageReference Include="NUnit" VersionOverride="3.13.3" />
+    <PackageReference Include="JavaScriptEngineSwitcher.NiL" />
 
     <ProjectReference Include="../../src/AutoprefixerHost/AutoprefixerHost.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' Or '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netcoreapp2.1' ">
-    <PackageReference Include="Microsoft.NET.Test.Sdk" VersionOverride="17.3.2" />
-    <PackageReference Include="NUnit3TestAdapter" VersionOverride="4.3.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
+    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" VersionOverride="4.3.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'net45' And '$(TargetFramework)' != 'net461' And '$(TargetFramework)' != 'netcoreapp2.1' ">
-    <PackageReference Include="Microsoft.NET.Test.Sdk" VersionOverride="17.7.2" />
-    <PackageReference Include="NUnit3TestAdapter" VersionOverride="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40-client' ">
-    <PackageReference Include="PolyfillsForOldDotNet.System.Runtime.InteropServices.RuntimeInformation" VersionOverride="0.1.1" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net461' ">
-    <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" VersionOverride="4.0.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'net45' And '$(TargetFramework)' != 'net461' ">
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net462' ">
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net40' And '$(TargetFramework)' != 'net45' And '$(TargetFramework)' != 'netcoreapp2.1' ">
-    <PackageReference Include="JavaScriptEngineSwitcher.NiL" />
   </ItemGroup>
 
   <ItemGroup>
