--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -14,16 +14,8 @@
     <DisableDefaultResxToCsConversionTarget>true</DisableDefaultResxToCsConversionTarget>
     <Title>$(Product)</Title>
     <Authors>Andrey Taritsyn</Authors>
-    <Description>.NET wrapper around the Andrey Sitnik's Autoprefixer (https://github.com/postcss/autoprefixer) version 10.4.18.0.
-
-Since the original library is written in JavaScript, you will need a JS engine to run it. As a JS engine is used the JavaScript Engine Switcher library (https://github.com/Taritsyn/JavaScriptEngineSwitcher). For correct working, you need to install one of the following NuGet packages:
-
- * JavaScriptEngineSwitcher.ChakraCore
- * JavaScriptEngineSwitcher.Jint
- * JavaScriptEngineSwitcher.V8
- * JavaScriptEngineSwitcher.Msie (only in the Chakra JsRT modes)
-
-After installing the packages, you will need to register the default JS engine (https://github.com/Taritsyn/JavaScriptEngineSwitcher/wiki/Registration-of-JS-engines).</Description>
+    <Description>.NET wrapper around the Andrey Sitnik's Autoprefixer.</Description>
+    <PackageReadmeFile>PACKAGE-DESCRIPTION.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Taritsyn/AutoprefixerHost</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
@@ -35,8 +27,6 @@ After installing the packages, you will need to register the default JS engine (
     <PackageTags>Autoprefixer;CSS</PackageTags>
     <PackageReleaseNotes>Added support for the Autoprefixer version 10.4.18.0.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
   </PropertyGroup>
 
   <Import Project="../../build/common.props" />
@@ -85,6 +75,10 @@ After installing the packages, you will need to register the default JS engine (
       <Visible>false</Visible>
     </None>
 
+    <Content Include="PACKAGE-DESCRIPTION.md">
+      <PackagePath>$(PackageReadmeFile)</PackagePath>
+      <Pack>true</Pack>
+    </Content>
     <Content Include="readme.txt">
       <PackagePath>/</PackagePath>
       <Pack>true</Pack>
