--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Product>Autoprefixer Host for .NET</Product>
     <VersionPrefix>3.0.36</VersionPrefix>
-    <TargetFrameworks>net40-client;net45;net461;netstandard1.3;netstandard2.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net40-client;net45;net461;netstandard1.3;netstandard2.0;net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <NoWarn>$(NoWarn);CS1591;NETSDK1215;NU1605</NoWarn>
@@ -23,7 +23,8 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageTags>Autoprefixer;CSS</PackageTags>
-    <PackageReleaseNotes>Added support for the Autoprefixer version 10.4.20.0.</PackageReleaseNotes>
+    <PackageReleaseNotes>1. No longer supports a .NET 6;
+2. Added support for .NET 8.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
@@ -32,7 +33,7 @@
   <Import Project="../../build/strong-name-signing.props" />
   <Import Project="../../build/nuget-common.props" />
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net6.0' ">
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net461' Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net8.0' ">
     <DefineConstants>$(DefineConstants);MODERN_JSON_CONVERTER</DefineConstants>
   </PropertyGroup>
 
