--- a/.editorconfig
+++ b/.editorconfig
@@ -20,12 +20,9 @@ indent_size = 4
 [*.sh]
 end_of_line = lf
 
-[*.{xml,config,csproj,props,targets}]
+[*.{xml,config,slnx,csproj,props,targets}]
 indent_style = space
 indent_size = 2
-
-[*.sln]
-insert_final_newline = true
 
 [*.{txt,md}]
 indent_style = space
